--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e2e-library",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "\" e2e library \"",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -27,5 +27,8 @@
     "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "protractor": "^5.4.0"
   }
 }
